--- a/application/layouts/scripts/_topnavmain.phtml
+++ b/application/layouts/scripts/_topnavmain.phtml
@@ -1,4 +1,8 @@
 
+<div class="container">    
+        <div class="logo-holder">
+                <a href="#">Coupons</a>
+        </div>
 <ul class="nav-list">
 	<li><a href=" <?= $this->url(array(
                         'controller' => 'public',
@@ -51,3 +55,5 @@
 		title="Le risposte a tutte le tue domande">Faq</a></li>
 
 </ul>
+</div>
+
