--- a/application/views/scripts/public/index.phtml
+++ b/application/views/scripts/public/index.phtml
@@ -1,6 +1,6 @@
-<br /><br />
-<div id="view-content">
-	<div class="search-container">
+
+
+<div class="search-container">
 	<div class="search-container-wrap">
 		<select>
 			<option>Item</option>
@@ -16,5 +16,56 @@
 	<div class="info">
 		<span>Just Search</span>
 	</div>
-	</div>
 </div>
+<div class="content">
+		<i class="fa fa-close close-btn" style="color:black;position:relative;left:98%;font-size:1.3rem"></i>
+		<div class="content-wrapper">
+				
+		<div class="content-element">
+			<div class="item">
+				<div class="inner">
+					<div class="wrapper">
+						<img src="http://placehold.it/400x300">
+						<div class="coupon-info">
+							<span style="">Descrizione</span>
+							<a href="" class="coupon-link" style="">Acquistare</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="inner">
+					<div class="wrapper">
+						<img src="http://placehold.it/400x300">
+						<div class="coupon-info">
+							<span style="">Descrizione</span>
+							<a href="" class="coupon-link" style="">Acquistare</a>
+						</div>
+					</div>	
+				</div>
+			</div>
+			<div class="item">
+				<div class="inner">
+					<div class="wrapper">
+						<img src="http://placehold.it/400x300">
+						<div class="coupon-info">
+							<span style="">Descrizione</span>
+							<a href="" class="coupon-link" style="">Acquistare</a>
+						</div>
+					</div>	
+				</div>
+			</div>
+			<div class="item">
+				<div class="inner">
+					<div class="wrapper">
+						<img src="http://placehold.it/400x300">
+						<div class="coupon-info">
+							<span style="">Descrizione</span>
+							<a href="" class="coupon-link" style="">Acquistare</a>
+						</div>
+					</div>	
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
