--- a/application/layouts/scripts/_topnavmain.phtml
+++ b/application/layouts/scripts/_topnavmain.phtml
@@ -1,7 +1,13 @@
 
 <div class="container">    
         <div class="logo-holder">
-                <a href="#">Coupons</a>
+                <a href=" <?= $this->url(array(
+                        'controller' => 'public',
+                        'action'     => 'index',
+                        ),
+                        'default',true
+                    );
+                    ?>">Coupons</a>
         </div>
 <ul class="nav-list">
 	<li><a href=" <?= $this->url(array(
