--- a/application/views/scripts/public/index.phtml
+++ b/application/views/scripts/public/index.phtml
@@ -1,5 +1,3 @@
-
-
 <div class="search-container">
 	<div class="search-container-wrap">
 		<select>
@@ -69,3 +67,4 @@
 		</div>
 	</div>
 	</div>
+ <?= $this->headScript()->appendFile($this->baseUrl() . '/js/search_script.js'); ?>
