--- a/application/layouts/scripts/_topnavmain.phtml
+++ b/application/layouts/scripts/_topnavmain.phtml
@@ -1,5 +1,5 @@
 
-<div class="container">    
+<div class="container">
         <div class="logo-holder">
                 <a href=" <?= $this->url(array(
                         'controller' => 'public',
@@ -33,7 +33,7 @@
 		href="
                 <?= $this->url(array(
                         'controller' => 'public',
-                        'action'     => 'aziende'),
+                        'action'     => 'company'),
                         'default',true
                     );
                  ?>"
@@ -62,4 +62,3 @@
 
 </ul>
 </div>
-
