--- a/application/layouts/scripts/_topnavmain.phtml
+++ b/application/layouts/scripts/_topnavmain.phtml
@@ -23,11 +23,11 @@
 		href="
                 <?= $this->url(array(
                         'controller' => 'public',
-                        'action'     => 'coupon'),
+                        'action'     => 'promotion'),
                         'default',true
                     );
                  ?>"
-		title="Cerca il tuo coupon preferito">Coupon</a></li>
+		title="Cerca il tuo coupon preferito">Promozioni</a></li>
 
 		<li><a
 		href="
