--- a/application/views/scripts/public/faq.phtml
+++ b/application/views/scripts/public/faq.phtml
@@ -1,107 +1,68 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="faq.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat|Ropa+Sans" rel="stylesheet">	
-
-	<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
-
-	<script type="text/javascript" src ="jquery-3.2.1.min.js"></script>
 
 </head>
 <body>
-
 <div class="content-container">
 		<h2 class="title">F.A.Q</h2>
-		<ul class="faq-list">
+		<ol class="faq-list">
+		
 			<li>
 				<div class="content-title">
-					<span>
-					Sono già un utente registrato, come posso accedere al mio account personale? 
-					</span>
+					<h4>Sono già un utente registrato, come posso accedere al mio account personale? </h4>
+					<h5> Clicca su “Login” in alto a destra della pagina Home e inserisci il tuo nome utente e password. </h5>
+				</div>					
+			</li>
+			
+			<li>
+				<div class="content-title">
+					<h4>Hai scordato la tua password?</h4>
+					<h5>Rivolgiti agli amministratori del sito tramite uno dei contatti che troverai in fondo ad ogni pagina del sito. </h5>
+				</div>				
+			</li>
+			
+			<li>
+				<div class="content-title">
+					<h4>Come posso scaricare un coupon? </h4>					
+					<h5>Stampa del coupon completamente gratuito e pagamento diretto presso il Partner. Per godere dell’offerta indicata sul coupon, devi semplicemente stampare quest’ultimo e recarti presso il punto vendita o l’attività dove effettuerai direttamente il pagamento, secondo le modalità accettate dal Partner, senza alcun bisogno di pagamento online con carta di credito.</h5>
 				</div>
-				<div class="content">
-					<span>Clicca su “Login” in alto a destra della pagina Home e inserisci il tuo nome utente e password.</span>
+			</li>
+			
+			<li>
+				<div class="content-title">
+					<h4>Quanto tempo ho per utilizzare il mio coupon?</h4>
+					<h5>La validità del coupon è chiaramente indicata sul coupon stesso.</h5>
 				</div>	
 			</li>
+			
+			<li>			
+				<div class="content-title">
+					<h4>Devo essere registrato per poter usufruire di un coupon?</h4>
+					<h5>Si, dopo la registrazione potrai stampare il coupon con relativo codice da presentare al negozio che ha emesso l’offerta</h5>
+				</div>	
+			</li>
+			
 			<li>
 				<div class="content-title">
-					<span>
-					Non ricordo più la mia password. 
-					</span>
-				</div>
-				<div class="content">
-					<span>Rivolgiti agli amministratori del sito tramite uno dei contatti che troverai in fondo ad ogni pagina del sito.
-					</span>
+					<h4>Posso stampare più coupon uguali per usufruire di maggiore sconto?</h4>
+					<h5>No, per ogni utente è possibile la stampa di un solo coupon per ogni promozione.</h5>
+				</div>	
+			</li>
+			
+			<li>				
+				<div class="content-title">
+					<h4>Quanti coupon posso stampare in una volta?</h4>
+					<h5>Non ci sono limiti al numero di coupon stampabili in una sola volta, uno per ogni coupon.</h5>
 				</div>
 			</li>
+			
 			<li>
 				<div class="content-title">
-					<span>
-					Come posso scaricare un coupon? 
-					</span>
-				</div>
-				<div class="content">
-					<span>Stampa del coupon completamente gratuito e pagamento diretto presso il Partner. Per godere dell’offerta indicata sul coupon, devi semplicemente stampare quest’ultimo e recarti presso il punto vendita o l’attività dove effettuerai direttamente il pagamento, secondo le modalità accettate dal Partner, senza alcun bisogno di pagamento online con carta di credito.
-					</span>
+					<h4>Sono già registrato ma come faccio a cambiare i miei dati personali?<h4>
+					<h5>Accedi all’area riservata in alto a destra dove troverai la procedura per modificare i tuoi dati.</h5>
 				</div>
 			</li>
-			<li>
-				<div class="content-title">
-					<span>
-					Quanto tempo ho per utilizzare il mio coupon?
-					</span>
-				</div>
-				<div class="content">
-					<span>La validità del coupon è chiaramente indicata sul coupon stesso.
-					</span>
-				</div>
-			</li>
-			<li>
-				<div class="content-title">
-					<span>
-					Devo essere registrato per poter usufruire di un coupon?
-					</span>
-				</div>
-				<div class="content">
-					<span>Si, dopo la registrazione potrai stampare il coupon con relativo codice da presentare al negozio che ha emesso l’offerta
-					</span>
-				</div>
-			</li>
-			<li>
-				<div class="content-title">
-					<span>
-					Posso stampare più coupon uguali per usufruire di maggiore sconto?
-					</span>
-				</div>
-				<div class="content">
-					<span>No, per ogni utente è possibile la stampa di un solo coupon per ogni promozione.
-					</span>
-				</div>
-			</li>
-			<li>
-				<div class="content-title">
-					<span>
-					Quanti coupon posso stampare in una volta?
-					</span>
-				</div>
-				<div class="content">
-					<span>Non ci sono limiti al numero di coupon stampabili in una sola volta.
-					</span>
-				</div>
-			</li>
-			<li>
-				<div class="content-title">
-					<span>
-					Sono già registrato ma come faccio a cambiare i miei dati personali?
-					</span>
-				</div>
-				<div class="content">
-					<span>Accedi all’area riservata in alto a destra dove troverai la procedura per modificare i tuoi dati.
-					</span>
-				</div>
-			</li>
-		</ul>
+		</ol>
 
 	</div>
 
