--- a/application/views/scripts/public/promotion.phtml
+++ b/application/views/scripts/public/promotion.phtml
@@ -13,7 +13,7 @@ $this->headTitle($this->title);
 
 <th>&nbsp;</th>
 </tr>
-<?php foreach($this->coupon as $coupon) : ?>
+<?php foreach($this->promotion as $coupon) : ?>
 <tr>
 <td><?php echo $this->escape($coupon->company);?></td>
 <td><?php echo $this->escape($coupon->datebegin);?></td>
