--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,15 @@ a{
 	color:#3c4859;
 	font-family: 'Montserrat', sans-serif;
 }
+
+p, th {
+color: white;
+}
+
+.content-container{
+color: white;
+}
+
 nav{
 	height: 7%;
 	display: flex;
