--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ html{
 body{
 	/*background-image: url(https://www.creationsiteinternet.be/file/2014/04/pink-bg.jpg);*/
 	margin: 0px;
-	background-color: #0c0c0c;
+	background-color: gray;
 	height: 100%;
 	overflow: hidden;
 }
