--- a/application/layouts/scripts/main.phtml
+++ b/application/layouts/scripts/main.phtml
@@ -1,12 +1,22 @@
 <?php echo $this->doctype() ?>
 <html>
 <head>
-	<?= $this->headMeta(); ?>
-    <?= $this->headLink()->appendStylesheet($this->baseUrl().'/css/styles.css'); ?>
-    <?= $this->headLink()->appendStylesheet("https://fonts.googleapis.com/css?family=Lobster|Montserrat|Ropa+Sans") ?>
-    <?= $this->headLink()->appendStylesheet($this->baseUrl().'/css/font-awesome-4.7.0/css/font-awesome.min.css') ?>
-    <?= $this->headScript()->appendFile($this->baseUrl() . '/js/jquery-3.2.1.min.js'); ?>
+	<?php $this->headMeta(); ?>
+    <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/styles.css'); ?>
+    <?php $this->headLink()->appendStylesheet("https://fonts.googleapis.com/css?family=Lobster|Montserrat|Ropa+Sans"); ?>
+    <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/font-awesome-4.7.0/css/font-awesome.min.css'); ?>
+    <?php $this->headScript()->appendFile($this->baseUrl() . '/js/jquery-3.2.1.min.js'); ?>
     <?= $this->headTitle(); ?>
+
+        <?php
+
+    	$style=""; 
+    	if($this->page_name == 'promotion'){$style = "promotion_page.css";}
+    	
+    	else if($this->page_name == 'company'){$style = "company_page.css";}
+    	
+    	echo $this->headLink()->appendStylesheet($this->baseUrl() .'/css/' . $style);
+    	  	?>
 
 </head>
 <body>
