--- a/application/views/scripts/public/company.phtml
+++ b/application/views/scripts/public/company.phtml
@@ -1,25 +1,33 @@
-<?php
-$this->title = "company";
-$this->headTitle($this->title);
-?>
+<div class="content">
+	<div class="content-wrapper">
+		<div class="content-element">
 
-<table>
-<tr>
-<th>Nome</th>
-<th>Emal</th>
-<th>SitoWeb</th>
-<th>Descrizione</th>
-<th>&nbsp;</th>
-</tr>
-<?php foreach($this->company as $company) : ?>
-<tr>
-<td><?php echo $this->escape($company->name);?></td>
-<td><?php echo $this->escape($company->email);?></td>
-<td><?php echo $this->escape($company->website);?></td>
-<td><?php echo $this->escape($company->description);?></td>
+			<?php foreach($this->company as $company) : ?>
 
+				<div class="item">
+					<div class="inner">
+						<div class="wrapper">
+							<img src="http://placehold.it/400x300">
+								<div class="coupon-info">
+									<span style="">
+									<?php echo $this->escape($company->name);?>
+									<?php echo $this->escape($company->email);?>
+									<?php echo $this->escape($company->website);?>
+									<?php echo $this->escape($company->phone);?>
+									<?php echo $this->escape($company->address);?>
+									<?php echo $this->escape($company->category);?>
+									<?php echo $this->escape($company->description);?>	
+									</span>
+									<a href="" class="coupon-link">Info</a>		
+									
+								</div>
+						</div>
+					</div>
+				</div>
 
-</td>
-</tr>
-<?php endforeach; ?>
-</table>
+			<?php endforeach; ?>
+
+		</div>
+	</div>
+</div>
+
