Implementazione di popup di promozione

--- a/application/views/scripts/public/company.phtml
+++ b/application/views/scripts/public/company.phtml
@@ -18,7 +18,7 @@
 									<?php echo $this->escape($company->category);?>
 									<?php echo $this->escape($company->description);?>	
 									</span>
-									<a href="" class="coupon-link">Info</a>		
+									<button class="coupon-button">Info</a>	
 									
 								</div>
 						</div>
