--- a/application/layouts/scripts/main.phtml
+++ b/application/layouts/scripts/main.phtml
@@ -5,7 +5,7 @@
     <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/styles.css'); ?>
     <?php $this->headLink()->appendStylesheet("https://fonts.googleapis.com/css?family=Lobster|Montserrat|Ropa+Sans"); ?>
     <?php $this->headLink()->appendStylesheet($this->baseUrl().'/css/font-awesome-4.7.0/css/font-awesome.min.css'); ?>
-    <?php $this->headScript()->appendFile($this->baseUrl() . '/js/jquery-3.2.1.min.js'); ?>
+    <?= $this->headScript()->appendFile($this->baseUrl() . '/js/jquery-3.2.1.min.js'); ?>
     <?= $this->headTitle(); ?>
 
         <?php
