--- a/application/views/scripts/public/promotion.phtml
+++ b/application/views/scripts/public/promotion.phtml
@@ -1,3 +1,18 @@
+<div class="search-container">
+	<div class="search-container-wrap">
+		<select>
+			<option>Item</option>
+			<option>Item</option>
+			<option>Item</option>
+			<option>Item</option>
+			<option>Item</option>
+			<option>Item</option>
+		</select>
+		<input type="text" name="Search" placeholder="Search">
+		<button class="search-button"><i class="fa fa-search"></i></button>
+	</div>
+</div>
+
 <div class="content">
 	<div class="content-wrapper">
 		<div class="content-element">
@@ -52,3 +67,5 @@
 	</div>
 </div>
 <?php $this->headScript()->appendFile($this->baseUrl() . '/js/modal.js'); ?>
+<?php $this->headScript()->appendFile($this->baseUrl() . '/js/item_anim.js'); ?>
+
