search form fix
Fix di search form

--- a/application/layouts/scripts/_topnavmain.phtml
+++ b/application/layouts/scripts/_topnavmain.phtml
@@ -1,4 +1,3 @@
-
 <div class="container">
         <div class="logo-holder">
                 <a href=" <?= $this->url(array(
@@ -9,6 +8,7 @@
                     );
                     ?>">Coupons</a>
         </div>
+        <?= $this->render('search.phtml'); ?>
 <ul class="nav-list">
 	<li><a href=" <?= $this->url(array(
                         'controller' => 'public',
