--- a/application/views/scripts/public/index.phtml
+++ b/application/views/scripts/public/index.phtml
@@ -1,6 +1,6 @@
 
 
-<div class="search-container">
+<!--<div class="search-container">
 	<div class="search-container-wrap">
 		<select>
 			<option>Item</option>
@@ -16,7 +16,7 @@
 	<div class="info">
 		<span>Just Search</span>
 	</div>
-</div>
+</div>-->
 <div class="content">
 		<i class="fa fa-close close-btn" style="color:black;position:relative;left:98%;font-size:1.3rem"></i>
 		<div class="content-wrapper">
@@ -69,4 +69,3 @@
 		</div>
 	</div>
 	</div>
-	<?= $this->headScript()->prependFile($this->baseUrl() . '/js/search_script.js'); ?>
