--- a/application/layouts/scripts/search.phtml
+++ b/application/layouts/scripts/search.phtml
@@ -1,4 +1,4 @@
-<div class="search-container">
+<!--<form class="search-container">
 	<div class="search-container-wrap">
 		<select>
 			<option>Item</option>
@@ -11,4 +11,6 @@
 		<input type="text" name="Search" placeholder="Search">
 		<button class="search-button"><i class="fa fa-search"></i></button>
 	</div>
-</div>
+</form>
+-->
+<?=$this->searchForm; ?>
